src/Test/Fixtures/Good/Arrays/negativeQAllocArrayDeclaration.lf
let qubits : [qubit; 3] = - qalloc(3);