src/Test/Fixtures/Bad/TypeQualifier/doubleScratchQubit.lf
let scratch scratch q: qubit = qalloc();
